<resources>
    <string name="app_name">Daily Life</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="app_id" translatable="false">ca-app-pub-3584862127630500~5166487614</string>
    <string name="banner_id" translatable="false">ca-app-pub-3584862127630500/9753434037</string>
    <string name="interstitial_full_screen" translatable="false">ca-app-pub-3584862127630500/8468272526</string>

    <string name="app_test" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="id_test" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="id_test2" translatable="false">ca-app-pub-3940256099942544/8691691433</string>

    <string name="_create">Create</string>
    <string name="_diary">Diary</string>
    <string name="_follow">Follow</string>
    <string name="_setting">Setting</string>
    <string name="_note">Note</string>
    <string name="_event">Event</string>
    <string name="_mood">Mood</string>
    <string name="_count_time">Countdown</string>
    <string name="_title">Title</string>
    <string name="_content">Content...</string>
    <string name="_work">Work</string>
    <string name="_travel">Travel</string>
    <string name="_shopping">Shopping</string>
    <string name="_upcoming">Upcoming</string>
    <string name="_place">Place</string>
    <string name="_color">Color</string>
    <string name="_day">Day</string>
    <string name="_month">Month</string>
    <string name="_year">Year</string>
    <string name="_hours">Hours</string>
    <string name="_minute">Minute</string>
    <string name="_close">Close</string>
    <string name="_yes">Yes</string>
    <string name="_seconds_item">seconds</string>
    <string name="_hours_item">hours</string>
    <string name="_minute_item">minute</string>
    <string name="_day_item">day</string>
    <string name="_create_successfully">Create successfully</string>
    <string name="_successfully">Successfully added an event to the list</string>
    <string name="_successfully2">You can adjust the activity information in the management list</string>
    <string name="_done">Done</string>
    <string name="_create_a_new_event">Create a new event</string>
    <string name="_meo">You may not know?</string>
    <string name="_date_of_the_event">Date of the event</string>
    <string name="_messenger">Do you want to save it or not?</string>
    <string name="_no">No</string>
    <string name="_messenger_back">Are you sure you want to exit?</string>
    <string name="_notification_title">The title cannot be left blank.</string>
    <string name="_notification_des">Description cannot be left blank.</string>
    <string name="_status_true">Accomplished</string>
    <string name="_status_false">Unfinished</string>
    <string name="_no_item">No event yet!</string>
    <string name="_messenger_delete">Are you sure you want to delete it?</string>
    <string name="_messenger_delete_all">Are you sure you want to delete all of them?</string>
    <string name="_delete">Delete</string>
    <string name="_all">All</string>
    <string name="_watching">Watching</string>
    <string name="_past">Past</string>
    <string name="_type_a_title_here">Type a title here</string>
    <string name="_note_here">Note here</string>
    <string name="_update_successful">Update successful !</string>
    <string name="_update_failded">Update failed !</string>
    <string name="_deleted">Deleted</string>
    <string name="_delete_all">Delete all</string>
    <string name="_time_takes_place">Time takes place</string>
    <string name="_in">In</string>
    <string name="_edit">Edit</string>
    <string name="_description">Description</string>
    <string name="_notification_date">Please select the time again!</string>
    <string name="_tools">Tools</string>
    <string name="_emotion">Emotion</string>
    <string name="_analysis">Analysis</string>
    <string name="_messenger_password">Enter a passcode of 6 digits</string>
    <string name="_messenger_re_pass">Re-enter new passcode</string>
    <string name="_messenger_wrong">Passcode do not match</string>
    <string name="_messenger_correct">Passcode is corect</string>
    <string name="_change_password">Change Password</string>
    <string name="_use_of_password">Use of passwords</string>
    <string name="_rate_app">Rate app</string>
    <string name="_feed_back">Feedback</string>
    <string name="_privacy_policy">Privacy policy</string>
    <string name="_messenger_keypass">Enter the old code</string>
    <string name="_messenger_remind">How are you today? Write quickly your diary lines!</string>
    <string name="_messenger_notiofication">There are events going on. Please check again!</string>
    <string name="_toast">Click it again to exit.</string>
    <string name="_celebration">Other</string>
    <string name="_bands">Sorry ! Your account is temporarily locked!</string>
    <string name="_bands_2">Sorry ! Your account is temporarily locked!</string>
    <string name="_enter_code">Enter code</string>
    <string name="_sigin_with_google">  sign in with google  </string>
    <string name="_image">Image</string>
    <string name="_fancy_text">Fancy text</string>
    <string name="_alone">Lonely day counter</string>
    <string name="_entertaiment">Entertaiment</string>
    <string name="_write_here">Write here</string>
    <string name="_today">Today</string>
    <string name="_calendar">Calendar</string>
    <string name="_sun">Sun</string>
    <string name="_mon">Mon</string>
    <string name="_tue">Tue</string>
    <string name="_wed">Wed</string>
    <string name="_thu">Thu</string>
    <string name="_fri">Fri</string>
    <string name="_sat">Sat</string>
    <string name="_choose_the_background">Choose the background color you like</string>
    <string name="_erro_add_event">Error! Content is still available!</string>
</resources>