<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_gravity="center"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PasswordActivity">

    <com.example.mydiary.utils.Bands
        android:id="@+id/passcodeView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bottom_navigation2"
        app:correctInputTip="@string/_messenger_correct"
        app:correctStateColor="#00BCD4"
        app:firstInputTip="@string/_messenger_password"
        app:normalStateColor="#ffffff"
        app:numberTextColor="#222222"
        app:passcodeLength="6"
        app:passcodeViewType="set_passcode"
        app:secondInputTip="@string/_messenger_re_pass"
        app:wrongInputTip="@string/_messenger_wrong"
        app:wrongStateColor="#ea2b46" />

</LinearLayout>