<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ChangePasswordActivity">
    <com.hanks.passcodeview.PasscodeView
        android:visibility="visible"
        android:id="@+id/passcodeView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/top_mood"
        app:firstInputTip="@string/_messenger_keypass"
        app:secondInputTip="@string/_messenger_re_pass"
        app:wrongInputTip="@string/_messenger_wrong"
        app:correctInputTip="@string/_messenger_correct"
        app:correctStateColor="@color/top_event"
        app:wrongStateColor="#ea2b46"
        app:normalStateColor="#FFFFFF"
        app:numberTextColor="#222222"
        app:passcodeLength="6"
        app:passcodeViewType="set_passcode"/>
    <com.hanks.passcodeview.PasscodeView
        android:visibility="gone"
        android:id="@+id/passcodeView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/top_mood"
        app:firstInputTip="@string/_messenger_password"
        app:secondInputTip="@string/_messenger_re_pass"
        app:wrongInputTip="@string/_messenger_wrong"
        app:correctInputTip="@string/_messenger_correct"
        app:correctStateColor="@color/top_event"
        app:wrongStateColor="#ea2b46"
        app:normalStateColor="#FFFFFF"
        app:numberTextColor="#222222"
        app:passcodeLength="6"
        app:passcodeViewType="set_passcode"/>

</LinearLayout>