<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:padding="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:paddingBottom="5dp"
        android:paddingTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">

        <ImageButton
            android:id="@+id/btnPrevious"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/actionBarItemBackground"
            android:padding="5dp"
            android:src="@drawable/ic_left_arrow" />

        <TextView
            android:id="@+id/mCurrentDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/btnNext"
            android:layout_toEndOf="@+id/btnPrevious"
            android:gravity="center"
            android:padding="5dp"
            android:text="Tháng 7 2020"
            android:textSize="18sp"
            android:textAlignment="center"
            style="@style/TextView" />

        <ImageButton
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="?attr/actionBarItemBackground"
            android:padding="5dp"
                android:src="@drawable/ic_right_arrow_angle" />
    </RelativeLayout>

    <LinearLayout
        android:weightSum="7"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            style="@style/TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_sun" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_mon"
            style="@style/TextView"/>

        <TextView
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_tue"
            style="@style/TextView"/>

        <TextView
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_wed"
            style="@style/TextView"/>

        <TextView
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_thu"
            style="@style/TextView"/>

        <TextView
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_fri"
            style="@style/TextView"/>

        <TextView
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_sat"
            style="@style/TextView"/>

    </LinearLayout>

    <GridView

        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/mGridView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:listSelector="@android:color/transparent"
        android:numColumns="7" />
</LinearLayout>

