<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.FinishActivity">

    <LinearLayout
        android:layout_marginTop="150dp"
        android:paddingBottom="20dp"
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:fontFamily="@font/nobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/_create_successfully"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:fontFamily="@font/nobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/_successfully" />

        <TextView
            android:fontFamily="@font/nobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/_successfully2" />
    </LinearLayout>

    <ImageView
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_category"
        android:layout_below="@+id/top"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true" />

    <androidx.appcompat.widget.AppCompatButton
        android:fontFamily="@font/nobile"
        android:id="@+id/mCreate"
        android:textAllCaps="false"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mDone"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_button_white"
        android:text="@string/_create_a_new_event"
        android:textColor="@color/black" />

    <androidx.appcompat.widget.AppCompatButton
        android:fontFamily="@font/nobile"
        android:textAllCaps="false"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/mDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_button_green"
        android:text="@string/_done"
        android:textColor="@color/white" />
</RelativeLayout>