<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:paddingEnd="5dp"
    android:paddingStart="5dp"
    android:weightSum="5"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="horizontal"
    android:paddingTop="25dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:padding="15dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <NumberPicker
            android:id="@+id/numberHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:padding="15dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <NumberPicker
            android:id="@+id/numberminute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout

        android:padding="15dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <NumberPicker
            android:id="@+id/numberDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:padding="15dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <NumberPicker
            android:id="@+id/numberMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:padding="15dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <NumberPicker
            android:id="@+id/numberYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</LinearLayout>