<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CreateFragment">
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_id" />
    <TextView
        android:layout_below="@+id/adView"
        android:fontFamily="@font/nobile"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:padding="10dp"
        android:textSize="18sp"
        android:id="@+id/mTV"
        android:text="@string/_diary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <GridView
        android:layout_below="@+id/mTV"
        android:id="@+id/mGridView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="20dp"
        android:numColumns="4" />
    <TextView
        android:fontFamily="@font/nobile"
        android:id="@+id/mTV2"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:padding="10dp"
        android:textSize="18sp"
        android:layout_below="@+id/mGridView"
        android:text="@string/_follow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <GridView
        android:layout_below="@+id/mTV2"
        android:id="@+id/mGridView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="20dp"
        android:numColumns="4" />
    <TextView
        android:fontFamily="@font/nobile"
        android:id="@+id/mTV3"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:padding="10dp"
        android:textSize="18sp"
        android:layout_below="@+id/mGridView2"
        android:text="@string/_meo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <GridView
        android:layout_below="@+id/mTV3"
        android:id="@+id/mGridView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="20dp"
        android:numColumns="4" />

</RelativeLayout>