<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".activity.BandsActivity">



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_zombie" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/nobile"
        android:gravity="center"
        android:text="@string/_bands"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/nobile"
        android:gravity="center"
        android:text="@string/_bands_2"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/nobile"
        android:gravity="center"
        android:text="Gmail: bnbbinh@gmail.com"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edtCode"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:background="@drawable/bg_bands"
        android:hint="@string/_enter_code"
        android:inputType="number"
        android:maxLength="9"
        android:maxLines="1"
        android:padding="10dp"
        android:textAlignment="center" />

    <ImageButton
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="?attr/selectableItemBackground"
        android:padding="10dp"
        android:src="@drawable/ic_send"
        android:visibility="gone" />

</LinearLayout>